[package]
edition = "2018"
name = "wallpaper-addon"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "1"
napi-derive = "1"

[dependencies.windows]
version = "0.28.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true

